--- a/main_page.html
+++ b/main_page.html
@@ -169,11 +169,11 @@
           <strong>Владіміров Даніїл</strong><br>
         </a>
         <a class="group-3-text">
-          <br>Він втілює справжній розум технологій.<br>
+          <br>Він володарює справжній розум технологій.<br>
           Його неймовірна винахідливість і глибокі знання в галузі коду,<br>
-          що дозволяють йому зробити неможливе можливим.<br>
+          дозволяють йому зробити неможливе можливим.<br>
           Він майстерно володіє різними мовами програмування та інструментами,<br>
-          здатна створити надзвичайно потужні й ефективні програми.<br>
+          здатен створити надзвичайно потужні й ефективні програми.<br>
         </a>
       </div>
     </div>
