--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,82 @@
   </nav>
 </header>
 <!-- =======GROUP OF ELEMENTS======== -->
-
+<div class="nav-bar"></div>
+<div id="group-1">
+  <div class="table" id="group-1-0">
+    <img id="author-logo-0">
+    <div class="button"><a href="https://t.me/Rusni_3_14z_da">Telegram</a></div>
+    <div class="button"><a href="https://www.instagram.com/unique.ill">Instagram</a></div>
+    <div class="button"><a href="https://github.com/MOORLOT">GitHub</a></div>
+  </div>
+  <div class="table" id="group-1-1">
+    <img id="author-logo-1">
+    <div class="button"><a href="https://t.me/V4ldem4r">Telegram</a></div>
+    <div class="button"><a href="https://www.instagram.com/unique.ill/">Instagram</a></div>
+    <div class="button"><a href="https://www.behance.net/bogdanevich">Behance</a></div>
+  </div>
+  <div class="table" id="group-1-2">
+    <img id="author-logo-2">
+    <div class="button"><a href="https://t.me/Holscore">Telegram</a></div>
+    <div class="button"><a href="https://www.instagram.com">Instagram</a></div>
+    <div class="button"><a href="https://github.com/hollli">GitHub</a></div>
+  </div>
+  <div class="table" id="group-1-3">
+    <img id="author-logo-3">
+    <div class="button"><a href="https://t.me/velychko21">Telegram</a></div>
+    <div class="button"><a href="https://www.instagram.com">Instagram</a></div>
+    <div class="button"><a href="https://github.com/Velychko19">GitHub</a></div>
+  </div>
+  <div class="table" id="group-1-4">
+    <img id="author-logo-4">
+    <div class="button"><a href="https://t.me/vlad_kravets12">Telegram</a></div>
+    <div class="button"><a href="https://www.instagram.com">Instagram</a></div>
+    <div class="button"><a href="https://github.com/VladislavKravets">GitHub</a></div>
+  </div>
+  <div class="table" id="group-1-5">
+    <img id="author-logo-5">
+    <div class="button"><a href="https://t.me/ButerSurname">Telegram</a></div>
+    <div class="button"><a href="https://www.instagram.com">Instagram</a></div>
+    <div class="button"><a href="https://github.com//DanilVladimirov">GitHub</a></div>
+  </div>
+  <div></div>
+  <div class="table" id="group-1-6">
+    <h1>Зв'яжіться з нами</h1>
+    <p>За для покращення роботи нашого<br>
+      проєкту або для відгуку</p>
+    <div class="fcf-body">
+      <div id="fcf-form">
+        <form id="fcf-form-id" class="fcf-form-class" method="POST" action="contact-form-process.php">
+          <div class="fcf-form-group">
+            <div class="fcf-input-group">
+              <textarea type="text" id="Name" name="Name" class="fcf-form-control" maxlength="255" rows="1"
+                        placeholder="Your name"
+                        required></textarea>
+            </div>
+          </div>
+          <div class="fcf-form-group">
+            <div class="fcf-input-group">
+              <textarea type="email" id="Email" name="Email" class="fcf-form-control" maxlength="300"
+                        placeholder="Your Email" rows="1" required></textarea>
+            </div>
+          </div>
+          <div class="fcf-form-group">
+            <div class="fcf-input-group">
+              <textarea id="Message" name="Message" class="fcf-form-control" placeholder="Your messege" rows="6"
+                        maxlength="3000"
+                        required></textarea>
+            </div>
+          </div>
+          <div class="fcf-form-group">
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Відправити
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div></div>
+</div>
 <!-- =======FOOTER======== -->
 <footer class="footer">
   <div class="footer-element-logo">
